# DeepLearning-Project

./: README.md  TODO.md  Tasks.md  main.py  pyproject.toml  requirements.txt
notebooks/: EDA.ipynb  pytorch.ipynb  scikit.ipynb  tensorflow.ipynb
src/: EDA.py  metrics.py
src/scikit/: main.py
src/tf/: main.py  tf_wrapper.py
src/torch/: main.py  torch_model.py  torch_utils.py  torch_wrapper.py
